optimize java options